--- a/style/main.css
+++ b/style/main.css
@@ -63,7 +63,23 @@ h1.title {
   color: white;
   margin-top: 8px;
   text-align: center; }
-  .score-container:after, .best-container:after {
+
+  .best-time-container  {
+    position: relative;
+    display: inline-block;
+    background: #bbada0;
+    padding: 15px 55px;
+    font-size: 25px;
+    height: 25px;
+    line-height: 47px;
+    font-weight: bold;
+    border-radius: 3px;
+    color: white;
+    margin-top: 8px;
+    text-align: center;
+  }
+
+  .score-container:after, .best-time-container:after, .best-container:after {
     position: absolute;
     width: 100%;
     top: 10px;
@@ -73,7 +89,8 @@ h1.title {
     line-height: 13px;
     text-align: center;
     color: #eee4da; }
-  .score-container .score-addition, .best-container .score-addition {
+
+  .score-container .score-addition, .best-container .score-addition{
     position: absolute;
     right: 30px;
     color: red;
@@ -94,6 +111,39 @@ h1.title {
 
 .best-container:after {
   content: "Best"; }
+
+.best-time-container:after {
+  content: "Best Time"; }
+
+.timer-container {
+    position: relative;
+    display: inline-block;
+    background: #bbada0;
+    padding: 15px 10px;
+    font-size: 25px;
+    line-height: 47px;
+    font-weight: bold;
+    border-radius: 3px;
+    color: white;
+    margin-top: 10px;
+    min-width: 40px;
+    height: 20px;
+    text-align: center;
+    vertical-align: middle; }
+
+  .timer-container::before {
+    content: ""; }
+
+  .timer-container::after{
+    position: absolute;
+    width: 100%;
+    top: 10px;
+    left: 0;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 13px;
+    text-align: center;
+    color: #eee4da; }
 
 p {
   margin-top: 0;
@@ -528,7 +578,23 @@ hr {
   line-height: 42px;
   display: block;
   text-align: center;
-  float: right; }
+  float: right;
+  margin-top: 20px;
+  margin-right: 5px;}
+
+.time-restart-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 11px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  margin-top: 20px;
+  float: right;
+   }
 
 .game-explanation {
   margin-top: 50px; }
@@ -549,7 +615,7 @@ hr {
     width: 280px;
     margin: 0 auto; }
 
-  .score-container, .best-container {
+  .score-container, .best-time-container, .best-container {
     margin-top: 0;
     padding: 15px 10px;
     min-width: 40px; }
@@ -563,7 +629,7 @@ hr {
     box-sizing: border-box;
     line-height: 1.65; }
 
-  .restart-button {
+  .restart-button, .time-restart-button {
     width: 42%;
     padding: 0;
     display: block;
