--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,8 @@ h1.title {
     opacity: 0; } }
 .scores-container {
   float: right;
-  text-align: right; }
+  text-align: right;
+  margin-top: 25px;}
 
 .score-container, .best-container {
   position: relative;
@@ -68,7 +69,7 @@ h1.title {
     position: relative;
     display: inline-block;
     background: #bbada0;
-    padding: 15px 55px;
+    padding: 15px 20px;
     font-size: 25px;
     height: 25px;
     line-height: 47px;
