--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 @import url(fonts/clear-sans.css);
 html, body {
-  margin: 0;
+  margin: 0;/Users/despinasiati/Downloads/local_storage_manager.txt
   padding: 0;
   background: #faf8ef;
   color: #776e65;
